--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ body {
     #product .img-product-box {
         display: none;
         width: 100%;
-        height: 560px;
+        min-height: 560px;
         border-radius: 20px;
         background-color: #FFC143;
         border-left: 22px solid #1C957F;
