--- a/css/style.css
+++ b/css/style.css
@@ -375,16 +375,16 @@ a {
 #footer .text-footer {
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 26px;
+    font-size: 1rem;
+    line-height: 1.625rem;
     max-width: 80%;
 }
 
 #footer .title-footer {
     color: #1C957F;
     font-style: normal;
-    font-size: 18px;
-    line-height: 22px;
+    font-size: 1.125.rem;
+    line-height: 1.375rem;
     font-weight: 600;
 }
 
@@ -396,8 +396,8 @@ a {
 #footer ul li {
     margin: 1rem;
     margin-left: 0;
-    font-size: 16px;
-    line-height: 19px;
+    font-size: 1rem;
+    line-height: 1.188rem;
     font-weight: 400;
 }
 
@@ -407,7 +407,7 @@ a {
     padding: 1rem;
     font-style: normal;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .banner {
