--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@
 
     .image_banner {
         width: 100%;
-        padding-top: 100px !important;
+        /* padding-top: 100px !important; */
     }
 }
 
@@ -140,7 +140,7 @@ body {
 
     .image_banner {
         width: 100%;
-        margin-top: -160px;
+        /* margin-top: -160px; */
     }
 
 #ilustrasi {
