--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,147 @@
+#creatingOpurtiny .card {
+    padding-top: 50px;
+    height: 280px;
+    padding-left: 24px;
+    padding-right: 24px;
+}
 
+#creatingOpurtiny .card img {
+    height: 100px;
+    margin-bottom: 8px;
+}
 
+#creatingOpurtiny .card .title {
+    margin-top: 1rem;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    text-align: center;
+    color: var(--text-color-secondary);
+}
 
+#creatingOpurtiny .card .subtitle {
+    margin-top: 1rem;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 130%;
+    font-size: 16px;
+    text-align: center;
+    color: var(--text-color-secondary);
+}
 
+#ourStory .title {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 40px;
+    text-align: right;
+    color: var(--text-color-secondary);
+    margin-bottom: 2rem;
+}
+
+#ourStory .description {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 160%;
+    text-align: right;
+    color: #000000;
+}
+
+#ourHistory .row {
+    margin-bottom: 40px;
+}
+
+#ourHistory .image {
+    margin-top: 8px;
+}
+
+#ourHistory .content .title {
+    margin: 0;
+    margin-bottom: 10px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 29px;    
+    color: var(--text-color-secondary);
+}
+
+#ourHistory .content .description {
+    margin: 0;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 160%;
+    color: var(--text-color-secondary);
+}
+
+.section_banner .title {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 60px;
+    line-height: 130%;
+    color: var(--text-color-secondary);
+    margin-top: 20vh;
+}
+
+.section_2_columns_with_image .col {
+    padding: 0;
+}
+
+.section_2_columns_with_image .col img {
+    width: 98%;
+    height: 100%;
+}
+
+.section_2_columns_with_image .col .line-on-top-title {
+    border: none;
+}
+
+.section_2_columns_with_image .col .title {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 40px;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    color: #232323;
+}
+
+.section_2_columns_with_image .col .description {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 160%;
+    color: #232323;
+}
+
+.section_2_columns_with_image .content-text {
+    padding: 20px;
+    padding-top: 40px;
+    text-align: justify;
+}
+
+.section_2_columns_with_image .content-text .button-learn-more {
+    background-color: var(--background-button-dark);
+    border: none;
+    padding: 0.6rem 0.8rem;
+    color: var(--text-color-white);
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 120%;
+    letter-spacing: 0.25em;
+    cursor: pointer;
+    text-decoration: none;
+}
 
 
 .d-flex {
