--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,16 @@
     height: 280px;
     padding-left: 24px;
     padding-right: 24px;
+    transition: transform .2s;
 }
 
 #creatingOpurtiny .card img {
     height: 100px;
     margin-bottom: 8px;
+}
+
+#creatingOpurtiny .card:hover {
+    transform: scale(1.1);
 }
 
 #creatingOpurtiny .card .title {
@@ -88,6 +93,27 @@
     line-height: 130%;
     color: var(--text-color-secondary);
     margin-top: 20vh;
+    margin-bottom: 20px;
+}
+
+.section_banner .button-learn-more {
+    background-color: var(--background-button-dark);
+    border: none;
+    padding: 0.6rem 0.8rem;
+    color: var(--text-color-white);
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 120%;
+    letter-spacing: 0.25em;
+    cursor: pointer;
+    text-decoration: none;
+    border-radius: 3px;
+}
+
+.section_banner .button-learn-more:hover {
+    background-color: var(--background-button-light);
 }
 
 .section_2_columns_with_image .col {
@@ -141,6 +167,10 @@
     letter-spacing: 0.25em;
     cursor: pointer;
     text-decoration: none;
+}
+
+.section_2_columns_with_image .content-text .button-learn-more {
+    background-color: var(--background-button-light);
 }
 
 
@@ -285,6 +315,11 @@
     line-height: 120%;
     letter-spacing: 0.25em;
     cursor: pointer;
+    text-decoration: none;
+}
+
+#measureImpact .item .button-learn-more:hover {
+    background-color: var(--background-button-light);
 }
 
 #howCanWeHelp .title {
@@ -328,3 +363,106 @@
         border-radius: 10px !important;
         width: 100%;
     }
+
+#ourTeam .flip {
+    margin: 2px; 
+    height: 200px;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+    #ourTeam .title {
+        margin-top: 1rem;
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: bold;
+        font-weight: 800;
+        font-size: 40px;
+        line-height: 130%;
+        text-align: center;
+        color: var(--text-color-secondary);
+    }
+
+    #ourTeam .flip:hover {
+        transform: rotateY(180deg);
+    }
+
+#sponsor .title {
+    font-family: 'Inter', sans-serif;
+    font-size: 40px;
+    font-weight: 800;
+    margin-top: 20px;
+    margin-bottom: 25px;
+    text-align: center;
+}
+
+.sidebar {
+    display: none;
+    float: right;
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 30%;
+    background: #58CCB9;
+}
+
+.sidebar .menu-item {
+    display: block;
+    padding: 20px 40px;
+    text-align: right;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 120%;
+    text-decoration: none;
+}
+
+#ourProjects .card {
+    margin-bottom: 4px;
+    box-shadow: -10px 8px 100px rgba(35, 35, 35, 0.1);
+}
+
+#ourProjects .card .line-on-top-title {
+    /* border: none; */
+    width: 40px;
+    height: 3px;
+    display: inline-block;
+}
+
+#ourProjects .card .title {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 40px;
+    line-height: 130%;
+    color: #232323;
+    margin-top: 14px;
+    margin-bottom: 6px;
+}
+
+#ourProjects .card .description {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 160%;
+    color: #232323;
+}
+
+#ourProjects .card .button-learn-more {
+    background-color: var(--background-button-dark);
+    border: none;
+    padding: 0.6rem 0.8rem;
+    color: var(--text-color-white);
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 120%;
+    letter-spacing: 0.25em;
+    cursor: pointer;
+    text-decoration: none;
+    border-radius: 3px;
+}
